# Fastapi_training_user

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  mypy.ini  pyproject.toml
app/: config.py  database.py
app/dao/: basedao.py
app/depends/: password.py
app/exceptions/: user_exceptions.py
app/tests/: conftest.py  mock_data_user.json
app/tests/intagration_test/: test_user_intagr.py
app/user/: dao.py  model.py  router.py  schemas.py  servis.py
migrartions/: env.py
migrartions/versions/: 64c4dd0f2dbe_newmodel.py  d1f28eed5e93_newmodeluser.py
