[tool.poetry]
name = "fastapi-training-user"
version = "0.1.0"
description = ""
authors = ["AndyRay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"
asyncio = "^3.4.3"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
python-json-logger = "^2.0.7"
bcrypt = "^4.2.0"
pydantic = {extras = ["email"], version = "^2.9.1"}
pytest = "^8.3.2"
faker = "^28.4.1"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
